<resources>
    <string name="app_name">Feedback App</string>

    <!-- Login activity -->
    <string name="activity_login_username_hint">Username</string>
    <string name="activity_login_password_hint">Password</string>
    <string name="activity_login_login_button">Log in</string>
    <!-- Login error strings -->
    <string name="error_field_required">This field is required</string>
    <string name="error_null_preferences">Authentication token expired. Please login again.</string>
    <string name="alert_dialog_close">Close</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_sure_exit">Are you sure you want to exit?</string>
    <string name="warning_offline_mode">You are in offline mode</string>

    <!-- Main activity -->
    <string name="activity_main_toolbar_title">Surveys</string>
    <string name="activity_main_powered_by_title">Powered By:</string>
    <string name="activity_main_neuralbits_title">NeuralBits</string>
    <!-- Main activity recycler view -->
    <string name="activity_main_recyclerview_completed">Completed:</string>
    <string name="activity_main_recyclerview_unsent">Unsent:</string>
    <!-- Main activity menu -->
    <string name="action_send_receive">Send and Receive</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Logout</string>

    <!-- Patient type fragment -->
    <string name="fragment_patient_type_add_new_title">Add New Patient</string>
    <string name="fragment_patient_type_use_existing_title">Use Existing Patient</string>

    <!-- Patient IPNO fragment -->
    <string name="fragment_patient_ipno_hint">IP/OP No</string>
    <string name="fragment_patient_ipno_next_button">Next</string>

    <!-- Patient details activity -->
    <string name="fragment_patient_details_toolbar_title">Patient Details</string>
    <string name="fragment_patient_details_name_hint">Name</string>
    <string name="fragment_patient_details_age_hint">Age</string>
    <string name="fragment_patient_details_ipno_hint">IP/OP No</string>
    <string name="fragment_patient_details_email_hint">Email</string>
    <string name="fragment_patient_details_came_as_title">I Came as a (Please Tick)</string>
    <string name="fragment_patient_details_came_as_patient_hint">Patient</string>
    <string name="fragment_patient_details_came_as_relative_hint">Relative</string>
    <string name="fragment_patient_details_came_as_visitor_hint">Visitor</string>
    <string name="fragment_patient_details_sex_title">Sex (Please Tick)</string>
    <string name="fragment_patient_details_sex_male_hint">Male</string>
    <string name="fragment_patient_details_sex_female_hint">Female</string>
    <string name="fragment_patient_details_sex_others_hint">Others</string>
    <string name="fragment_patient_details_phone_hint">Phone</string>
    <string name="fragment_patient_details_ward_hint">Ward No/Name</string>
    <string name="fragment_patient_details_bed_no_hint">Bed No</string>
    <string name="fragment_patient_details_empty_fields_snackbar">Some fields are emty</string>
    <string name="fragment_patient_details_close_button_snackbar">Close</string>

    <!-- Survey activity -->
    <string name="activity_survey_category_title">Category:</string>

    <!-- Survey content fragment -->
    <string name="fragment_survey_content_spinner_tap_select">Tap to select</string>
    <string name="fragment_survey_content_yesno_yes">Yes</string>
    <string name="fragment_survey_content_yesno_no">No</string>
    <string name="fragment_survey_content_placeholder">0. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="fragment_dialog_spinner_items_reset">Reset</string>
    <string name="fragment_dialog_spinner_items_done">Done</string>

</resources>
