<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText.TexiInputLayout.Theme">

                <EditText
                    android:id="@+id/name"
                    style="@style/EditText.Style"
                    android:hint="@string/fragment_patient_details_name_hint"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/EditText.TexiInputLayout.Theme">

                    <EditText
                        android:id="@+id/age"
                        style="@style/EditText.Style"
                        android:hint="@string/fragment_patient_details_age_hint"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_ipno"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/EditText.TexiInputLayout.Theme">

                    <EditText
                        android:id="@+id/ipno"
                        style="@style/EditText.Style"
                        android:hint="@string/fragment_patient_details_ipno_hint"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:theme="@style/EditText.TexiInputLayout.Theme">

                <EditText
                    android:id="@+id/email"
                    style="@style/EditText.Style"
                    android:hint="@string/fragment_patient_details_email_hint"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/came_as_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:text="@string/fragment_patient_details_came_as_title"
                android:textColor="@color/grey"
                android:textSize="8pt" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/came_as_patient_check"
                    style="@style/CheckBoxCustomStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/fragment_patient_details_came_as_patient_hint" />

                <CheckBox
                    android:id="@+id/came_as_relative_check"
                    style="@style/CheckBoxCustomStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/fragment_patient_details_came_as_relative_hint" />

                <CheckBox
                    android:id="@+id/came_as_visitor_check"
                    style="@style/CheckBoxCustomStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/fragment_patient_details_came_as_visitor_hint" />

            </RelativeLayout>

            <TextView
                android:id="@+id/sex_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:text="@string/fragment_patient_details_sex_title"
                android:textColor="@color/grey"
                android:textSize="8pt" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/sex_male_check"
                    style="@style/CheckBoxCustomStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/fragment_patient_details_sex_male_hint" />

                <CheckBox
                    android:id="@+id/sex_female_check"
                    style="@style/CheckBoxCustomStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/fragment_patient_details_sex_female_hint" />

                <CheckBox
                    android:id="@+id/sex_others_check"
                    style="@style/CheckBoxCustomStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/fragment_patient_details_sex_others_hint" />

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:theme="@style/EditText.TexiInputLayout.Theme">

                <EditText
                    android:id="@+id/phone"
                    style="@style/EditText.Style"
                    android:hint="@string/fragment_patient_details_phone_hint"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:theme="@style/EditText.TexiInputLayout.Theme">

                <EditText
                    android:id="@+id/ward"
                    style="@style/EditText.Style"
                    android:hint="@string/fragment_patient_details_ward_hint"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_bed_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:theme="@style/EditText.TexiInputLayout.Theme">

                <EditText
                    android:id="@+id/bed_no"
                    style="@style/EditText.Style"
                    android:hint="@string/fragment_patient_details_bed_no_hint"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_check"
        app:backgroundTint="@color/green" />

</RelativeLayout>