<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <!-- Dummy item to prevent EditText from receiving focus -->
    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:scaleType="centerInside"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:theme="@style/EditText.TexiInputLayout.Theme">

            <EditText
                android:id="@+id/username"
                style="@style/EditText.Login.Style"
                android:hint="@string/activity_login_username_hint"
                android:inputType="textPersonName"
                android:theme="@style/EditText.Login.Theme" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:theme="@style/EditText.TexiInputLayout.Theme">

            <EditText
                android:id="@+id/password"
                style="@style/EditText.Login.Style"
                android:hint="@string/activity_login_password_hint"
                android:inputType="textPassword"
                android:theme="@style/EditText.Login.Theme" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/login_button"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/activity_login_login_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

</LinearLayout>
